# AoC2023

./: CMakeLists.txt
day01/: day01.cc
input/03/: b_test.txt
src/01/: main.cc
src/02/: main.cc
src/03/: main.cc
